ctl_lib = shared_library('ctl',
  'source/base/basecontainercontrol.cxx',
  'source/base/basecontrol.cxx',
  'source/base/multiplexer.cxx',
  'source/base/registercontrols.cxx',
  'source/controls/OConnectionPointContainerHelper.cxx',
  'source/controls/OConnectionPointHelper.cxx',
  'source/controls/framecontrol.cxx',
  'source/controls/progressbar.cxx',
  'source/controls/progressmonitor.cxx',
  'source/controls/statusindicator.cxx',
  udk_fake_h, off_fake_h,
  cpp_args: ['-DLIBO_INTERNAL_ONLY'],
  include_directories: [main_inc, udkh_inc, offapi_inc, 'inc', 'source/inc'],
  link_with: [comphelper_lib, cppuhelper_lib, cppu_lib, tl_lib, sal_lib],
  install: true,
)
