acc_lib = shared_library('acclo',
  'source/extended/AccessibleBrowseBox.cxx',
  'source/extended/AccessibleBrowseBoxBase.cxx',
  'source/extended/AccessibleBrowseBoxCheckBoxCell.cxx',
  'source/extended/AccessibleBrowseBoxHeaderBar.cxx',
  'source/extended/AccessibleBrowseBoxHeaderCell.cxx',
  'source/extended/AccessibleBrowseBoxTable.cxx',
  'source/extended/AccessibleBrowseBoxTableBase.cxx',
  'source/extended/AccessibleBrowseBoxTableCell.cxx',
  'source/extended/AccessibleGridControl.cxx',
  'source/extended/AccessibleGridControlBase.cxx',
  'source/extended/AccessibleGridControlHeader.cxx',
  'source/extended/AccessibleGridControlHeaderCell.cxx',
  'source/extended/AccessibleGridControlTable.cxx',
  'source/extended/AccessibleGridControlTableBase.cxx',
  'source/extended/AccessibleGridControlTableCell.cxx',
  'source/extended/accessiblebrowseboxcell.cxx',
  'source/extended/accessibleeditbrowseboxcell.cxx',
  'source/extended/accessibleiconchoicectrl.cxx',
  'source/extended/accessibleiconchoicectrlentry.cxx',
  'source/extended/accessiblelistbox.cxx',
  'source/extended/accessiblelistboxentry.cxx',
  'source/extended/accessibletabbar.cxx',
  'source/extended/accessibletabbarbase.cxx',
  'source/extended/accessibletabbarpage.cxx',
  'source/extended/accessibletabbarpagelist.cxx',
  'source/extended/accessibletablistbox.cxx',
  'source/extended/accessibletablistboxtable.cxx',
  'source/extended/textwindowaccessibility.cxx',
  'source/helper/acc_factory.cxx',
  'source/helper/accresmgr.cxx',
  'source/helper/characterattributeshelper.cxx',
  'source/helper/IComboListBoxHelper.cxx',
  'source/standard/accessiblemenubasecomponent.cxx',
  'source/standard/accessiblemenucomponent.cxx',
  'source/standard/accessiblemenuitemcomponent.cxx',
  'source/standard/floatingwindowaccessible.cxx',
  'source/standard/vclxaccessiblebox.cxx',
  'source/standard/vclxaccessiblebutton.cxx',
  'source/standard/vclxaccessiblecheckbox.cxx',
  'source/standard/vclxaccessiblecombobox.cxx',
  'source/standard/vclxaccessibledropdowncombobox.cxx',
  'source/standard/vclxaccessibledropdownlistbox.cxx',
  'source/standard/vclxaccessibleedit.cxx',
  'source/standard/vclxaccessiblefixedhyperlink.cxx',
  'source/standard/vclxaccessiblefixedtext.cxx',
  'source/standard/vclxaccessibleheaderbar.cxx',
  'source/standard/vclxaccessibleheaderbaritem.cxx',
  'source/standard/vclxaccessiblelist.cxx',
  'source/standard/vclxaccessiblelistbox.cxx',
  'source/standard/vclxaccessiblelistitem.cxx',
  'source/standard/vclxaccessiblemenu.cxx',
  'source/standard/vclxaccessiblemenubar.cxx',
  'source/standard/vclxaccessiblemenuitem.cxx',
  'source/standard/vclxaccessiblemenuseparator.cxx',
  'source/standard/vclxaccessiblepopupmenu.cxx',
  'source/standard/vclxaccessibleradiobutton.cxx',
  'source/standard/vclxaccessiblescrollbar.cxx',
  'source/standard/vclxaccessiblestatusbar.cxx',
  'source/standard/vclxaccessiblestatusbaritem.cxx',
  'source/standard/vclxaccessibletabcontrol.cxx',
  'source/standard/vclxaccessibletabpage.cxx',
  'source/standard/vclxaccessibletabpagewindow.cxx',
  'source/standard/vclxaccessibletextcomponent.cxx',
  'source/standard/vclxaccessibletextfield.cxx',
  'source/standard/vclxaccessibletoolbox.cxx',
  'source/standard/vclxaccessibletoolboxitem.cxx',
  udk_fake_h, off_fake_h,
  cpp_args: ['-DLIBO_INTERNAL_ONLY'],
  include_directories: [main_inc, udkh_inc, offapi_inc, 'inc', 'source/inc'],
  link_with: [comphelper_lib,
    cppu_lib,
    cppuhelper_lib,
    sal_lib,
    salhelper_lib,
    i18nlangtag_lib,
    sot_lib,
    svl_lib,
    svt_lib,
    tk_lib,
    tl_lib,
    utl_lib,
    vcl_lib,
  ],
  dependencies: [],
  install: true,
)
