avmedia_lib = shared_library('avmedia',
#  'source/avmediadummy.cxx',
  'source/framework/mediacontrol.cxx',
  'source/framework/MediaControlBase.cxx',
  'source/framework/mediaitem.cxx',
  'source/framework/mediaplayer.cxx',
  'source/framework/mediatoolbox.cxx',
  'source/framework/soundhandler.cxx',
  'source/viewer/mediaevent_impl.cxx',
  'source/viewer/mediawindow.cxx',
  'source/viewer/mediawindow_impl.cxx',
  udk_fake_h, off_fake_h,
  cpp_args: ['-DAVMEDIA_DLLIMPLEMENTATION',
             '-DLIBO_INTERNAL_ONLY'],
  include_directories: [main_inc, udkh_inc, offapi_inc, 'inc', 'source/inc'],
  link_with: [comphelper_lib, ucbhelper_lib, cppuhelper_lib, cppu_lib, sal_lib, i18nlangtag_lib, sfx_lib, svl_lib, svt_lib, tl_lib, utl_lib, vcl_lib],
  dependencies: [],
  install: true,
)

