basegfx_lib = shared_library('basegfxlo',
  'source/polygon/b2dpolygonclipper.cxx',
  'source/polygon/b2dpolygoncutandtouch.cxx',
  'source/polygon/b2dpolygontriangulator.cxx',
  'source/polygon/b2dpolypolygon.cxx',
  'source/polygon/b2dpolypolygoncutter.cxx',
  'source/polygon/b2dlinegeometry.cxx',
  'source/polygon/b2dtrapezoid.cxx',
  'source/polygon/b2dpolypolygontools.cxx',
  'source/color/bcolormodifier.cxx',
  'source/color/bcolortools.cxx',
  'source/curve/b2dbeziertools.cxx',
  'source/curve/b2dcubicbezier.cxx',
  'source/matrix/b2dhommatrix.cxx',
  'source/matrix/b2dhommatrixtools.cxx',
  'source/matrix/b3dhommatrix.cxx',
  'source/matrix/b3dhommatrixtools.cxx',
  'source/numeric/ftools.cxx',
  'source/point/b2dpoint.cxx',
  'source/point/b2ipoint.cxx',
  'source/point/b3dpoint.cxx',
  'source/polygon/b2dpolygon.cxx',
  'source/polygon/b2dsvgpolypolygon.cxx',
  'source/polygon/b2dpolygontools.cxx',
  'source/polygon/b3dpolygon.cxx',
  'source/polygon/b3dpolygontools.cxx',
  'source/polygon/b3dpolypolygon.cxx',
  'source/polygon/b3dpolypolygontools.cxx',
  'source/polygon/WaveLine.cxx',
  'source/range/b2dpolyrange.cxx',
  'source/range/b2drange.cxx',
  'source/range/b2drangeclipper.cxx',
  'source/range/b2xrange.cxx',
  'source/range/b3drange.cxx',
  'source/raster/rasterconvert3d.cxx',
  'source/tools/b2dclipstate.cxx',
  'source/tools/canvastools.cxx',
  'source/tools/gradienttools.cxx',
  'source/tools/keystoplerp.cxx',
  'source/tools/numbertools.cxx',
  'source/tools/stringconversiontools.cxx',
  'source/tools/systemdependentdata.cxx',
  'source/tools/tools.cxx',
  'source/tools/unopolypolygon.cxx',
  'source/tools/zoomtools.cxx',
  'source/tuple/b2dtuple.cxx',
  'source/tuple/b3dtuple.cxx',
  'source/vector/b2dvector.cxx',
  'source/vector/b2ivector.cxx',
  'source/vector/b3dvector.cxx',
  udk_fake_h, off_fake_h,
  include_directories: [main_inc, udkh_inc, offapi_inc, 'source/inc'],
  cpp_args: ['-DBASEGFX_DLLIMPLEMENTATION',
             '-DLIBO_INTERNAL_ONLY'],
  link_with: [sal_lib, cppu_lib, cppuhelper_lib],
  gnu_symbol_visibility: 'hidden',
  install: true,
)
