scripting_sources = files(
  'source/basmgr/basicmanagerrepository.cxx',
  'source/basmgr/basmgr.cxx',
  'source/basmgr/vbahelper.cxx',
  'source/classes/codecompletecache.cxx',
  'source/classes/eventatt.cxx',
  'source/classes/global.cxx',
  'source/classes/image.cxx',
  'source/classes/propacc.cxx',
  'source/classes/sb.cxx',
  'source/classes/sbunoobj.cxx',
  'source/classes/sbxmod.cxx',
  'source/comp/basiccharclass.cxx',
  'source/comp/buffer.cxx',
  'source/comp/codegen.cxx',
  'source/comp/dim.cxx',
  'source/comp/exprtree.cxx',
  'source/comp/exprgen.cxx',
  'source/comp/exprnode.cxx',
  'source/comp/io.cxx',
  'source/comp/loops.cxx',
  'source/comp/parser.cxx',
  'source/comp/sbcomp.cxx',
  'source/comp/scanner.cxx',
  'source/comp/symtbl.cxx',
  'source/comp/token.cxx',
  'source/uno/dlgcont.cxx',
  'source/uno/modsizeexceeded.cxx',
  'source/uno/namecont.cxx',
  'source/uno/scriptcont.cxx',
  'source/runtime/comenumwrapper.cxx',
  'source/runtime/ddectrl.cxx',
  'source/runtime/inputbox.cxx',
  'source/runtime/iosys.cxx',
  'source/runtime/props.cxx',
  'source/runtime/stdobj.cxx',
  'source/runtime/stdobj1.cxx',
  'source/runtime/runtime.cxx',
  'source/classes/errobject.cxx',
)

common_sources = files(
  'source/runtime/basrdll.cxx',
  'source/runtime/methods.cxx',
  'source/runtime/methods1.cxx',
  'source/classes/sbintern.cxx',
  'source/sbx/sbxarray.cxx',
  'source/sbx/sbxbool.cxx',
  'source/sbx/sbxbyte.cxx',
  'source/sbx/sbxchar.cxx',
  'source/sbx/sbxcoll.cxx',
  'source/sbx/sbxcurr.cxx',
  'source/sbx/sbxbase.cxx',
  'source/sbx/sbxdate.cxx',
  'source/sbx/sbxdbl.cxx',
  'source/sbx/sbxdec.cxx',
  'source/sbx/sbxexec.cxx',
  'source/sbx/sbxform.cxx',
  'source/sbx/sbxint.cxx',
  'source/sbx/sbxlng.cxx',
  'source/sbx/sbxobj.cxx',
  'source/sbx/sbxres.cxx',
  'source/sbx/sbxscan.cxx',
  'source/sbx/sbxsng.cxx',
  'source/sbx/sbxstr.cxx',
  'source/sbx/sbxuint.cxx',
  'source/sbx/sbxulng.cxx',
  'source/sbx/sbxvalue.cxx',
  'source/sbx/sbxvar.cxx',
)

sb_lib = shared_library('sblo',
  scripting_sources,
  common_sources,
  'source/runtime/dllmgr-none.cxx',
  udk_fake_h, off_fake_h, oovba_fake_h, basicide_hxx,
  cpp_args: ['-DBASIC_DLLIMPLEMENTATION',
             '-DLIBO_INTERNAL_ONLY'],
  include_directories: [main_inc, udkh_inc, offapi_inc, oovbaapi_inc, 'source/inc', 'inc', setup_inc],
  link_with: [comphelper_lib, cppuhelper_lib, cppu_lib, salhelper_lib, sal_lib, i18nlangtag_lib, sot_lib, svl_lib, svt_lib, tl_lib, utl_lib, vcl_lib, xmlscript_lib],
  install: true,
)
