load("@com_googlesource_gerrit_bazlets//tools:javadoc.bzl", "java_doc")
load("@rules_java//java:defs.bzl", "java_binary", "java_library")

package(default_visibility = ["//visibility:public"])

java_binary(
    name = "officebean-src-binary",
    main_class = "Dummy.java",
    resource_strip_prefix = "bean",
    resources = glob(["com/**"]),
)

genrule(
    name = "officebean-src",
    srcs = [":officebean-src-binary_deploy.jar"],
    outs = ["officebean.srcjar"],
    cmd = "mv $< $@",
)

java_library(
    name = "officebean",
    srcs = [":officebean-src"],
    deps = [
        "//:ridl",
        "//:unoil",
        "//javaunohelper:juh",
        "//jurt",
    ],
)

java_doc(
    name = "officebean-javadoc",
    libs = [":officebean"],
    pkgs = ["com.sun.star.comp.beans"],
    title = "LibreOffice API",
)

exports_files(["pom.officebean.xml"])
