binaryurp_lib = shared_library('binaryurplo',
  'source/binaryany.cxx',
  'source/bridge.cxx',
  'source/bridgefactory.cxx',
  'source/currentcontext.cxx',
  'source/incomingrequest.cxx',
  'source/lessoperators.cxx',
  'source/marshal.cxx',
  'source/outgoingrequests.cxx',
  'source/proxy.cxx',
  'source/reader.cxx',
  'source/unmarshal.cxx',
  'source/writer.cxx',
  udk_fake_h, off_fake_h,
  cpp_args: ['-DLIBO_INTERNAL_ONLY'],
  include_directories: [main_inc, udkh_inc, offapi_inc],
  link_with: [cppuhelper_lib, cppu_lib, salhelper_lib, sal_lib],
  install: true,
)
