_uno_lib = shared_library('gcc3_uno',
  'source/cpp_uno/shared/cppinterfaceproxy.cxx',
  'source/cpp_uno/shared/bridge.cxx',
  'source/cpp_uno/shared/component.cxx',
  'source/cpp_uno/shared/types.cxx',
  'source/cpp_uno/shared/unointerfaceproxy.cxx',
  'source/cpp_uno/shared/vtablefactory.cxx',
  'source/cpp_uno/shared/vtables.cxx',
  'source/cpp_uno/gcc3_linux_x86-64/abi.cxx',
  'source/cpp_uno/gcc3_linux_x86-64/abi.hxx',
  'source/cpp_uno/gcc3_linux_x86-64/call.s',
  'source/cpp_uno/gcc3_linux_x86-64/callvirtualmethod.cxx',
  'source/cpp_uno/gcc3_linux_x86-64/cpp2uno.cxx',
  'source/cpp_uno/gcc3_linux_x86-64/except.cxx',
  'source/cpp_uno/gcc3_linux_x86-64/rtti.cxx',
  'source/cpp_uno/gcc3_linux_x86-64/share.hxx',
  'source/cpp_uno/gcc3_linux_x86-64/uno2cpp.cxx',
  udk_fake_h, off_fake_h,
  cpp_args: ['-DLIBO_INTERNAL_ONLY'],
  include_directories: [main_inc, 'inc', udkh_inc, offapi_inc],
  link_with: [cppu_lib, sal_lib],
  dependencies: [dl_dep],
  install: true,
)

