canvastools_lib = shared_library('canvastoolslo',
  'source/tools/cachedprimitivebase.cxx',
  'source/tools/canvascustomspritehelper.cxx',
  'source/tools/canvastools.cxx',
  'source/tools/elapsedtime.cxx',
  'source/tools/page.cxx',
  'source/tools/pagemanager.cxx',
  'source/tools/parametricpolypolygon.cxx',
  'source/tools/propertysethelper.cxx',
  'source/tools/spriteredrawmanager.cxx',
  'source/tools/surface.cxx',
  'source/tools/surfaceproxy.cxx',
  'source/tools/surfaceproxymanager.cxx',
  'source/tools/verifyinput.cxx',
  udk_fake_h, off_fake_h,
  include_directories: [main_inc, udkh_inc, offapi_inc],
  cpp_args: ['-DLIBO_INTERNAL_ONLY',
             '-DCANVASTOOLS_DLLIMPLEMENTATION'],
  link_with: [basegfx_lib, comphelper_lib, cppuhelper_lib, cppu_lib, tk_lib, tl_lib, vcl_lib, sal_lib],
  install: true,
)

vclcanvas_lib = shared_library('vclcanvaslo',
  'source/vcl/backbuffer.cxx',
  'source/vcl/bitmapbackbuffer.cxx',
  'source/vcl/cachedbitmap.cxx',
  'source/vcl/canvas.cxx',
  'source/vcl/canvasbitmap.cxx',
  'source/vcl/canvasbitmaphelper.cxx',
  'source/vcl/canvascustomsprite.cxx',
  'source/vcl/canvasfont.cxx',
  'source/vcl/canvashelper.cxx',
  'source/vcl/devicehelper.cxx',
  'source/vcl/impltools.cxx',
  'source/vcl/services.cxx',
  'source/vcl/spritecanvas.cxx',
  'source/vcl/spritecanvashelper.cxx',
  'source/vcl/spritedevicehelper.cxx',
  'source/vcl/spritehelper.cxx',
  'source/vcl/textlayout.cxx',
  'source/vcl/canvashelper_texturefill.cxx',
  'source/vcl/windowoutdevholder.cxx',
  udk_fake_h, off_fake_h,
  include_directories: [main_inc, udkh_inc, offapi_inc],
  cpp_args: ['-DLIBO_INTERNAL_ONLY'],
  link_with: [basegfx_lib, canvastools_lib, vcl_lib, svt_lib, tk_lib, tl_lib, cppuhelper_lib, cppu_lib, comphelper_lib, i18nlangtag_lib, sal_lib],
  install: true,
)

cairocanvas_lib = shared_library('cairocanvaslo',
  'source/cairo/cairo_cachedbitmap.cxx',
  'source/cairo/cairo_canvas.cxx',
  'source/cairo/cairo_canvasbitmap.cxx',
  'source/cairo/cairo_canvascustomsprite.cxx',
  'source/cairo/cairo_canvasfont.cxx',
  'source/cairo/cairo_canvashelper.cxx',
  'source/cairo/cairo_canvashelper_text.cxx',
  'source/cairo/cairo_devicehelper.cxx',
  'source/cairo/cairo_services.cxx',
  'source/cairo/cairo_spritecanvas.cxx',
  'source/cairo/cairo_spritecanvashelper.cxx',
  'source/cairo/cairo_spritedevicehelper.cxx',
  'source/cairo/cairo_spritehelper.cxx',
  'source/cairo/cairo_textlayout.cxx',
  udk_fake_h, off_fake_h,
  cpp_args: ['-DLIBO_INTERNAL_ONLY'],
  include_directories: [main_inc, udkh_inc, offapi_inc],
  link_with: [cppuhelper_lib, cppu_lib, basegfx_lib, canvastools_lib, vcl_lib, tk_lib, tl_lib, comphelper_lib, i18nlangtag_lib, sal_lib],
  dependencies: [cairo_dep],
  install: true,
)
