chartcore_lib = shared_library('chartcore',
  'source/view/axes/DateHelper.cxx',
  'source/view/axes/DateScaling.cxx',
  'source/view/axes/MinimumAndMaximumSupplier.cxx',
  'source/view/axes/ScaleAutomatism.cxx',
  'source/view/axes/Tickmarks.cxx',
  'source/view/axes/Tickmarks_Dates.cxx',
  'source/view/axes/Tickmarks_Equidistant.cxx',
  'source/view/axes/VAxisBase.cxx',
  'source/view/axes/VAxisOrGridBase.cxx',
  'source/view/axes/VAxisProperties.cxx',
  'source/view/axes/VCartesianAxis.cxx',
  'source/view/axes/VCartesianCoordinateSystem.cxx',
  'source/view/axes/VCartesianGrid.cxx',
  'source/view/axes/VCoordinateSystem.cxx',
  'source/view/axes/VPolarAngleAxis.cxx',
  'source/view/axes/VPolarAxis.cxx',
  'source/view/axes/VPolarCoordinateSystem.cxx',
  'source/view/axes/VPolarGrid.cxx',
  'source/view/axes/VPolarRadiusAxis.cxx',
  'source/view/charttypes/AreaChart.cxx',
  'source/view/charttypes/BarChart.cxx',
  'source/view/charttypes/BarPositionHelper.cxx',
  'source/view/charttypes/BubbleChart.cxx',
  'source/view/charttypes/CandleStickChart.cxx',
  'source/view/charttypes/CategoryPositionHelper.cxx',
  'source/view/charttypes/ConfigAccess.cxx',
  'source/view/charttypes/NetChart.cxx',
  'source/view/charttypes/PieChart.cxx',
  'source/view/charttypes/Splines.cxx',
  'source/view/charttypes/VSeriesPlotter.cxx',
  'source/view/diagram/VDiagram.cxx',
  'source/view/main/ChartItemPool.cxx',
  'source/view/main/ChartView.cxx',
  'source/view/main/Clipping.cxx',
  'source/view/main/DataPointSymbolSupplier.cxx',
  'source/view/main/DrawModelWrapper.cxx',
  'source/view/main/LabelPositionHelper.cxx',
  'source/view/main/Linear3DTransformation.cxx',
  'source/view/main/PlotterBase.cxx',
  'source/view/main/PlottingPositionHelper.cxx',
  'source/view/main/PolarLabelPositionHelper.cxx',
  'source/view/main/PropertyMapper.cxx',
  'source/view/main/ShapeFactory.cxx',
  'source/view/main/Stripe.cxx',
  'source/view/main/VDataSeries.cxx',
  'source/view/main/VLegend.cxx',
  'source/view/main/VLegendSymbolFactory.cxx',
  'source/view/main/VLineProperties.cxx',
  'source/view/main/VPolarTransformation.cxx',
  'source/view/main/VTitle.cxx',
  'source/view/main/VButton.cxx',

  'source/model/filter/XMLFilter.cxx',
  'source/model/main/Axis.cxx',
  'source/model/main/BaseCoordinateSystem.cxx',
  'source/model/main/CartesianCoordinateSystem.cxx',
  'source/model/main/ChartModel.cxx',
  'source/model/main/ChartModel_Persistence.cxx',
  'source/model/main/DataPoint.cxx',
  'source/model/main/DataPointProperties.cxx',
  'source/model/main/DataSeries.cxx',
  'source/model/main/DataSeriesProperties.cxx',
  'source/model/main/Diagram.cxx',
  'source/model/main/FormattedString.cxx',
  'source/model/main/GridProperties.cxx',
  'source/model/main/Legend.cxx',
  'source/model/main/PageBackground.cxx',
  'source/model/main/PolarCoordinateSystem.cxx',
  'source/model/main/StockBar.cxx',
  'source/model/main/Title.cxx',
  'source/model/main/UndoManager.cxx',
  'source/model/main/Wall.cxx',
  'source/model/template/AreaChartType.cxx',
  'source/model/template/AreaChartTypeTemplate.cxx',
  'source/model/template/BarChartType.cxx',
  'source/model/template/BarChartTypeTemplate.cxx',
  'source/model/template/BubbleChartType.cxx',
  'source/model/template/BubbleChartTypeTemplate.cxx',
  'source/model/template/BubbleDataInterpreter.cxx',
  'source/model/template/CandleStickChartType.cxx',
  'source/model/template/ChartType.cxx',
  'source/model/template/ChartTypeManager.cxx',
  'source/model/template/ChartTypeTemplate.cxx',
  'source/model/template/ColumnChartType.cxx',
  'source/model/template/ColumnLineChartTypeTemplate.cxx',
  'source/model/template/ColumnLineDataInterpreter.cxx',
  'source/model/template/DataInterpreter.cxx',
  'source/model/template/FilledNetChartType.cxx',
  'source/model/template/LineChartType.cxx',
  'source/model/template/LineChartTypeTemplate.cxx',
  'source/model/template/NetChartType.cxx',
  'source/model/template/NetChartTypeTemplate.cxx',
  'source/model/template/PieChartType.cxx',
  'source/model/template/PieChartTypeTemplate.cxx',
  'source/model/template/ScatterChartType.cxx',
  'source/model/template/ScatterChartTypeTemplate.cxx',
  'source/model/template/StockChartTypeTemplate.cxx',
  'source/model/template/StockDataInterpreter.cxx',
  'source/model/template/XYDataInterpreter.cxx',

  'source/tools/AxisHelper.cxx',
  'source/tools/BaseGFXHelper.cxx',
  'source/tools/CachedDataSequence.cxx',
  'source/tools/CharacterProperties.cxx',
  'source/tools/ChartModelHelper.cxx',
  'source/tools/ChartTypeHelper.cxx',
  'source/tools/ChartViewHelper.cxx',
  'source/tools/ColorPerPointHelper.cxx',
  'source/tools/CommonConverters.cxx',
  'source/tools/ConfigColorScheme.cxx',
  'source/tools/ControllerLockGuard.cxx',
  'source/tools/DataSeriesHelper.cxx',
  'source/tools/DataSource.cxx',
  'source/tools/DataSourceHelper.cxx',
  'source/tools/DiagramHelper.cxx',
  'source/tools/ErrorBar.cxx',
  'source/tools/ExplicitCategoriesProvider.cxx',
  'source/tools/ExponentialRegressionCurveCalculator.cxx',
  'source/tools/FillProperties.cxx',
  'source/tools/FormattedStringHelper.cxx',
  'source/tools/ImplOPropertySet.cxx',
  'source/tools/InternalData.cxx',
  'source/tools/InternalDataProvider.cxx',
  'source/tools/LabeledDataSequence.cxx',
  'source/tools/LegendHelper.cxx',
  'source/tools/LifeTime.cxx',
  'source/tools/LinearRegressionCurveCalculator.cxx',
  'source/tools/LinePropertiesHelper.cxx',
  'source/tools/LogarithmicRegressionCurveCalculator.cxx',
  'source/tools/MeanValueRegressionCurveCalculator.cxx',
  'source/tools/MediaDescriptorHelper.cxx',
  'source/tools/ModifyListenerHelper.cxx',
  'source/tools/MovingAverageRegressionCurveCalculator.cxx',
  'source/tools/NameContainer.cxx',
  'source/tools/NumberFormatterWrapper.cxx',
  'source/tools/ObjectIdentifier.cxx',
  'source/tools/OPropertySet.cxx',
  'source/tools/PolynomialRegressionCurveCalculator.cxx',
  'source/tools/PopupRequest.cxx',
  'source/tools/PotentialRegressionCurveCalculator.cxx',
  'source/tools/PropertyHelper.cxx',
  'source/tools/RangeHighlighter.cxx',
  'source/tools/ReferenceSizeProvider.cxx',
  'source/tools/RegressionCurveCalculator.cxx',
  'source/tools/RegressionCurveHelper.cxx',
  'source/tools/RegressionCurveModel.cxx',
  'source/tools/RegressionEquation.cxx',
  'source/tools/RelativePositionHelper.cxx',
  'source/tools/RelativeSizeHelper.cxx',
  'source/tools/ResId.cxx',
  'source/tools/Scaling.cxx',
  'source/tools/SceneProperties.cxx',
  'source/tools/StatisticsHelper.cxx',
  'source/tools/ThreeDHelper.cxx',
  'source/tools/TitleHelper.cxx',
  'source/tools/TrueGuard.cxx',
  'source/tools/UncachedDataSequence.cxx',
  'source/tools/UserDefinedProperties.cxx',
  'source/tools/WeakListenerAdapter.cxx',
  'source/tools/WrappedDefaultProperty.cxx',
  'source/tools/WrappedDirectStateProperty.cxx',
  'source/tools/WrappedIgnoreProperty.cxx',
  'source/tools/WrappedProperty.cxx',
  'source/tools/WrappedPropertySet.cxx',
  'source/tools/XMLRangeHelper.cxx',

  udk_fake_h, off_fake_h, common_hxx,
  cpp_args: ['-DOOO_DLLIMPLEMENTATION_CHARTTOOLS',
             '-DOOO_DLLIMPLEMENTATION_CHARTVIEW',
             '-DLIBO_INTERNAL_ONLY'],
  include_directories: [main_inc, udkh_inc, offapi_inc, 'inc', 'source/view/inc', 'source/inc', 'source/model/inc/', setup_inc],
  link_with: [basegfx_lib,
    comphelper_lib,
    cppu_lib,
    cppuhelper_lib,
    drawinglayer_lib,
    editeng_lib,
    fwe_lib,
    i18nlangtag_lib,
    sal_lib,
    salhelper_lib,
    sfx_lib,
    svl_lib,
    svt_lib,
    svxcore_lib,
    tl_lib,
    ucbhelper_lib,
    utl_lib,
    vcl_lib,
  ],
  dependencies: [],
  install: true,
)

chartcontroller_lib = shared_library('chartcontroller',
  'source/controller/accessibility/AccessibleBase.cxx',
  'source/controller/accessibility/AccessibleChartElement.cxx',
  'source/controller/accessibility/AccessibleChartShape.cxx',
  'source/controller/accessibility/AccessibleChartView.cxx',
  'source/controller/accessibility/AccessibleTextHelper.cxx',
  'source/controller/accessibility/AccessibleViewForwarder.cxx',
  'source/controller/accessibility/ChartElementFactory.cxx',
  'source/controller/chartapiwrapper/AreaWrapper.cxx',
  'source/controller/chartapiwrapper/AxisWrapper.cxx',
  'source/controller/chartapiwrapper/Chart2ModelContact.cxx',
  'source/controller/chartapiwrapper/ChartDataWrapper.cxx',
  'source/controller/chartapiwrapper/ChartDocumentWrapper.cxx',
  'source/controller/chartapiwrapper/DataSeriesPointWrapper.cxx',
  'source/controller/chartapiwrapper/DiagramWrapper.cxx',
  'source/controller/chartapiwrapper/GridWrapper.cxx',
  'source/controller/chartapiwrapper/LegendWrapper.cxx',
  'source/controller/chartapiwrapper/MinMaxLineWrapper.cxx',
  'source/controller/chartapiwrapper/TitleWrapper.cxx',
  'source/controller/chartapiwrapper/UpDownBarWrapper.cxx',
  'source/controller/chartapiwrapper/WallFloorWrapper.cxx',
  'source/controller/chartapiwrapper/WrappedAddInProperty.cxx',
  'source/controller/chartapiwrapper/WrappedAutomaticPositionProperties.cxx',
  'source/controller/chartapiwrapper/WrappedAxisAndGridExistenceProperties.cxx',
  'source/controller/chartapiwrapper/WrappedCharacterHeightProperty.cxx',
  'source/controller/chartapiwrapper/WrappedDataCaptionProperties.cxx',
  'source/controller/chartapiwrapper/WrappedGapwidthProperty.cxx',
  'source/controller/chartapiwrapper/WrappedNumberFormatProperty.cxx',
  'source/controller/chartapiwrapper/WrappedScaleProperty.cxx',
  'source/controller/chartapiwrapper/WrappedScaleTextProperties.cxx',
  'source/controller/chartapiwrapper/WrappedSceneProperty.cxx',
  'source/controller/chartapiwrapper/WrappedSeriesAreaOrLineProperty.cxx',
  'source/controller/chartapiwrapper/WrappedSplineProperties.cxx',
  'source/controller/chartapiwrapper/WrappedStatisticProperties.cxx',
  'source/controller/chartapiwrapper/WrappedStockProperties.cxx',
  'source/controller/chartapiwrapper/WrappedSymbolProperties.cxx',
  'source/controller/chartapiwrapper/WrappedTextRotationProperty.cxx',
  'source/controller/dialogs/ChangingResource.cxx',
  'source/controller/dialogs/ChartResourceGroupDlgs.cxx',
  'source/controller/dialogs/ChartResourceGroups.cxx',
  'source/controller/dialogs/ChartTypeDialogController.cxx',
  'source/controller/dialogs/DataBrowser.cxx',
  'source/controller/dialogs/DataBrowserModel.cxx',
  'source/controller/dialogs/DialogModel.cxx',
  'source/controller/dialogs/dlg_ChartType.cxx',
  'source/controller/dialogs/dlg_ChartType_UNO.cxx',
  'source/controller/dialogs/dlg_CreationWizard.cxx',
  'source/controller/dialogs/dlg_CreationWizard_UNO.cxx',
  'source/controller/dialogs/dlg_DataEditor.cxx',
  'source/controller/dialogs/dlg_DataSource.cxx',
  'source/controller/dialogs/dlg_InsertAxis_Grid.cxx',
  'source/controller/dialogs/dlg_InsertDataLabel.cxx',
  'source/controller/dialogs/dlg_InsertErrorBars.cxx',
  'source/controller/dialogs/dlg_InsertLegend.cxx',
  'source/controller/dialogs/dlg_InsertTitle.cxx',
  'source/controller/dialogs/dlg_NumberFormat.cxx',
  'source/controller/dialogs/dlg_ObjectProperties.cxx',
  'source/controller/dialogs/dlg_ShapeFont.cxx',
  'source/controller/dialogs/dlg_ShapeParagraph.cxx',
  'source/controller/dialogs/dlg_View3D.cxx',
  'source/controller/dialogs/ObjectNameProvider.cxx',
  'source/controller/dialogs/RangeSelectionHelper.cxx',
  'source/controller/dialogs/RangeSelectionListener.cxx',
  'source/controller/dialogs/res_BarGeometry.cxx',
  'source/controller/dialogs/res_DataLabel.cxx',
  'source/controller/dialogs/res_ErrorBar.cxx',
  'source/controller/dialogs/res_LegendPosition.cxx',
  'source/controller/dialogs/res_Titles.cxx',
  'source/controller/dialogs/res_Trendline.cxx',
  'source/controller/dialogs/TextDirectionListBox.cxx',
  'source/controller/dialogs/TimerTriggeredControllerLock.cxx',
  'source/controller/dialogs/TitleDialogData.cxx',
  'source/controller/dialogs/tp_3D_SceneAppearance.cxx',
  'source/controller/dialogs/tp_3D_SceneGeometry.cxx',
  'source/controller/dialogs/tp_3D_SceneIllumination.cxx',
  'source/controller/dialogs/tp_AxisLabel.cxx',
  'source/controller/dialogs/tp_AxisPositions.cxx',
  'source/controller/dialogs/tp_ChartType.cxx',
  'source/controller/dialogs/tp_DataLabel.cxx',
  'source/controller/dialogs/tp_DataSource.cxx',
  'source/controller/dialogs/tp_ErrorBars.cxx',
  'source/controller/dialogs/tp_LegendPosition.cxx',
  'source/controller/dialogs/tp_PointGeometry.cxx',
  'source/controller/dialogs/tp_PolarOptions.cxx',
  'source/controller/dialogs/tp_RangeChooser.cxx',
  'source/controller/dialogs/tp_Scale.cxx',
  'source/controller/dialogs/tp_SeriesToAxis.cxx',
  'source/controller/dialogs/tp_TitleRotation.cxx',
  'source/controller/dialogs/tp_Trendline.cxx',
  'source/controller/dialogs/tp_Wizard_TitlesAndObjects.cxx',
  'source/controller/drawinglayer/DrawViewWrapper.cxx',
  'source/controller/drawinglayer/ViewElementListProvider.cxx',
  'source/controller/itemsetwrapper/AxisItemConverter.cxx',
  'source/controller/itemsetwrapper/CharacterPropertyItemConverter.cxx',
  'source/controller/itemsetwrapper/DataPointItemConverter.cxx',
  'source/controller/itemsetwrapper/ErrorBarItemConverter.cxx',
  'source/controller/itemsetwrapper/GraphicPropertyItemConverter.cxx',
  'source/controller/itemsetwrapper/ItemConverter.cxx',
  'source/controller/itemsetwrapper/LegendItemConverter.cxx',
  'source/controller/itemsetwrapper/MultipleChartConverters.cxx',
  'source/controller/itemsetwrapper/MultipleItemConverter.cxx',
  'source/controller/itemsetwrapper/RegressionCurveItemConverter.cxx',
  'source/controller/itemsetwrapper/RegressionEquationItemConverter.cxx',
  'source/controller/itemsetwrapper/SeriesOptionsItemConverter.cxx',
  'source/controller/itemsetwrapper/StatisticsItemConverter.cxx',
  'source/controller/itemsetwrapper/TextLabelItemConverter.cxx',
  'source/controller/itemsetwrapper/TitleItemConverter.cxx',
  'source/controller/main/ChartController.cxx',
  'source/controller/main/ChartController_EditData.cxx',
  'source/controller/main/ChartController_Insert.cxx',
  'source/controller/main/ChartController_Position.cxx',
  'source/controller/main/ChartController_Properties.cxx',
  'source/controller/main/ChartController_TextEdit.cxx',
  'source/controller/main/ChartController_Tools.cxx',
  'source/controller/main/ChartController_Window.cxx',
  'source/controller/main/ChartDropTargetHelper.cxx',
  'source/controller/main/ChartFrameloader.cxx',
  'source/controller/main/ChartModelClone.cxx',
  'source/controller/main/ChartTransferable.cxx',
  'source/controller/main/ChartWindow.cxx',
  'source/controller/main/CommandDispatchContainer.cxx',
  'source/controller/main/CommandDispatch.cxx',
  'source/controller/main/ConfigurationAccess.cxx',
  'source/controller/main/ControllerCommandDispatch.cxx',
  'source/controller/main/DragMethod_Base.cxx',
  'source/controller/main/DragMethod_PieSegment.cxx',
  'source/controller/main/DragMethod_RotateDiagram.cxx',
  'source/controller/main/DrawCommandDispatch.cxx',
  'source/controller/main/ElementSelector.cxx',
  'source/controller/main/FeatureCommandDispatchBase.cxx',
  'source/controller/main/ObjectHierarchy.cxx',
  'source/controller/main/PositionAndSizeHelper.cxx',
  'source/controller/main/SelectionHelper.cxx',
  'source/controller/main/ShapeController.cxx',
  'source/controller/main/StatusBarCommandDispatch.cxx',
  'source/controller/main/ToolbarController.cxx',
  'source/controller/main/UndoActions.cxx',
  'source/controller/main/UndoCommandDispatch.cxx',
  'source/controller/main/UndoGuard.cxx',
  'source/controller/sidebar/Chart2PanelFactory.cxx',
  'source/controller/sidebar/ChartAreaPanel.cxx',
  'source/controller/sidebar/ChartAxisPanel.cxx',
  'source/controller/sidebar/ChartColorWrapper.cxx',
  'source/controller/sidebar/ChartElementsPanel.cxx',
  'source/controller/sidebar/ChartErrorBarPanel.cxx',
  'source/controller/sidebar/ChartLinePanel.cxx',
  'source/controller/sidebar/ChartSeriesPanel.cxx',
  'source/controller/sidebar/ChartSidebarModifyListener.cxx',
  'source/controller/sidebar/ChartSidebarSelectionListener.cxx',
  'source/controller/sidebar/ChartTypePanel.cxx',
  'source/controller/uitest/uiobject.cxx',

  udk_fake_h, off_fake_h,
  cpp_args: ['-DLIBO_INTERNAL_ONLY'],
  include_directories: [main_inc, udkh_inc, offapi_inc, 'inc', 'source/inc', 'source/controller/inc'],
  link_with: [basegfx_lib,
    chartcore_lib,
    comphelper_lib,
    cppu_lib,
    cppuhelper_lib,
    drawinglayer_lib,
    editeng_lib,
    sal_lib,
    salhelper_lib,
    i18nlangtag_lib,
    sfx_lib,
    sot_lib,
    svl_lib,
    svt_lib,
    svxcore_lib,
    svx_lib,
    tk_lib,
    tl_lib,
    ucbhelper_lib,
    utl_lib,
    vcl_lib,
  ],
  dependencies: [],
  install: true,
)
